ajout de la page contact et about

--- a/templates/base/_header.html.twig
+++ b/templates/base/_header.html.twig
@@ -23,7 +23,7 @@
             <!-- Navigation -->
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link "  href="">
+                    <a class="nav-link "  href="{{ path('app_about') }}">
                         A propos de moi
                     </a>
 
@@ -35,7 +35,7 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">
+                    <a class="nav-link " href="{{ path('app_contact') }}">
                         Contact
                     </a>
 
