--- a/templates/home/_project-carousel.html.twig
+++ b/templates/home/_project-carousel.html.twig
@@ -1,5 +1,5 @@
 <section class="mt-5 container">
-    <h2 class="text-center fw-bolder">Portfolio</h2>
+    <h2 class="text-center fw-bolder">Mes projets</h2>
 
     <div class="" data-flickity='{"pageDots": true,"cellAlign": "left", "wrapAround": true, "imagesLoaded": true}'>
         <div class="col-12 col-md-4 px-1">
