--- a/templates/about/_presentation.html.twig
+++ b/templates/about/_presentation.html.twig
@@ -3,13 +3,13 @@
         <div class="col-12 mt-5">
             <h3 class="fw-bolder text-center">Qui suis je ?</h3>
         </div>
-
+        {% for about in abouts %}
         <div class="col-6 mt-5">
             <img src="{{ asset('upload/about/'~ about.image) }}" alt="" class="img-fluid">
         </div>
         <div class="col-6 mt-5">
             {{ about.content|raw }}
-
+        {% endfor %}
 
         </div>
     </div>
