--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,20 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AboutController!{% endblock %}
+{% block title %}A propos{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <!-- WELCOME -->
+    {{ include('home/_welcome.html.twig') }}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <!-- PRESENTATION -->
+    {{ include('about/_presentation.html.twig') }}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'E:/site/Portfolio/src/Controller/AboutController.php'|file_link(0) }}">src/Controller/AboutController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'E:/site/Portfolio/templates/about/index.html.twig'|file_link(0) }}">templates/about/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <!-- CONTENT -->
+    {{ include('home/_content.html.twig') }}
+    <!-- SKILL -->
+    {{ include('home/_skill.html.twig') }}
+
+    <!-- CAROUSEL -->
+    {{ include('home/_project-carousel.html.twig') }}
 {% endblock %}
